// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`row.ts should have vertical margin when set "column" props 1`] = `
<div class="row row--column"
     style="margin-top: -8px; margin-bottom: -8px;"
>
</div>
`;

exports[`row.ts should render row component with customized gutter 1`] = `
<div class="row row--gutter-xs">
</div>
`;

exports[`row.ts should render row component with customized gutter 2`] = `
<div class="row"
     style="margin-left: -4px; margin-right: -4px;"
>
</div>
`;

exports[`row.ts should render row component with customized justify & align props 1`] = `
<div class="row row--justify-content-center row--align-items-end">
</div>
`;
